--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  align-items: center;
+  /* align-items: center; */
   display: flex;
   /* justify-content: center; */
   /* margin-top: 20px; */
@@ -7,9 +7,19 @@
   gap: 20px;
 }
 
+section {
+  display: flex;
+}
+
+aside {
+  padding: 20px;
+  /* word-break: break-all; */
+  width: 200px;
+}
+
 #cy {
   background-color: #1b1b1b;
-  width: 100vw;
+  width: calc(100vw - 200px);
   height: calc(100vh - 80px);
   display: block;
 }
