--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,13 @@ aside {
   padding: 5px 30px;
 }
 
+.actions input[type=file] {
+  background-color: #ff6d91;
+  color: black;
+  padding: 3px 10px;
+  margin-left: 8px;
+}
+
 .App aside ul {
   padding-left: 8px;
 }
